# gemini

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
doc/v1/design/: 00_INITIAL_PROMPT.md  01_IMPLEMENTATION_PLAN.md  02_AI.md
gemini_core/: Cargo.toml
gemini_core/benches/: engine.rs
gemini_core/benches/ai/: alphabeta.rs  random.rs
gemini_core/src/: ai.rs  engine.rs  lib.rs
gemini_core/src/ai/: alphabeta.rs  random.rs  types.rs
gemini_core/src/ai/alphabeta/: eval.rs  limits.rs  move_ordering.rs  search.rs  tests.rs  tt.rs
gemini_core/src/engine/: game.rs  position.rs  types.rs
gemini_core/tests/: cpu_vs_cpu.rs
gemini_sdl/: Cargo.toml
gemini_sdl/src/: main.rs
gemini_wasm/: Cargo.toml  index.html
gemini_wasm/pkg/: gemini_wasm.js  gemini_wasm_bg.wasm
gemini_wasm/src/: lib.rs
sdl/: Cargo.toml
wasm/: Cargo.toml
