[package]
name = "gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["json"]}

[lints.clippy]
restriction = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }

single_call_fn = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
