[package]
name = "gemini_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gemini_core = { path = "../gemini_core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "Window"] }
